# mycel

./: .gitignore  .ralphrc  AGENTS.md  Cargo.toml  README.md
.claude/: CLAUDE.md
.claude/commands/: work-on-issue.md
.claude/skills/: work-on-issue.md
.codex/skills/work-on-issue/: SKILL.md
.planning/: HAPPY_INTEGRATION.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
.ralph/specs/: runtime-roadmap.md
docs/specs/: 2026-03-18-poke-design.md
src/: attention.rs  confirm.rs  happy.rs  main.rs
src/bank/: mod.rs
src/cli/: attach.rs  bank.rs  bank_export.rs  bank_import.rs  banked.rs  handoff.rs  history.rs  host.rs  init.rs  kill.rs  list.rs  mod.rs  notify.rs  projects.rs  reap.rs  rename.rs  spawn.rs  stop.rs  unbank.rs  web.rs
src/config/: mod.rs
src/db/: mod.rs
src/disk/: mod.rs
src/notify/: mod.rs
src/session/: compose.rs  handoff.rs  mod.rs  placement.rs  remote.rs  runtime.rs  tmux.rs
src/tui/: logo.rs  mod.rs
src/worktree/: mod.rs
